crates/core/src/plan/snapshots/mix_core__plan__tests__a_failed_undo_is_reported_the_others_still_run_and_nothing_foreign_is_removed.snap
---
source: crates/core/src/plan/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_UNSPECIFIED",
    "changes": [
      {
        "action": "CHANGE_ACTION_CREATE",
        "operation": "OPERATION_CREATE_DIR",
        "status": "STATUS_SUCCEEDED",
        "step": "create-nix-dir",
        "subject": "/nix",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_CREATE",
        "operation": "OPERATION_CREATE_DIR",
        "status": "STATUS_SUCCEEDED",
        "step": "create-nix-var",
        "subject": "/nix/var",
        "undone": true,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_CREATE",
        "operation": "OPERATION_ADD_GROUP",
        "status": "STATUS_SUCCEEDED",
        "step": "create-groups",
        "subject": "nixbld",
        "undone": true,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "write-marker",
        "subject": "/nix/.mix-managed",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_FAILED",
        "step": "write-nix-conf",
        "subject": "/etc/nix.conf",
        "undone": false,
        "unknown": []
      }
    ],
    "command": "bootstrap",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [
      {
        "causes": [],
        "code": "CODE_IO",
        "detail": "/injected: other error",
        "help": [
          "run the command again with `-v` to see what failed"
        ],
        "io": {
          "kind": "Other",
          "path": "/injected"
        },
        "subject": "/injected",
        "title": "Reading or writing a file failed for a reason other than permissions",
        "type": "urn:mix:problem:io"
      }
    ],
    "request": "request",
    "status": "STATUS_FAILED",
    "steps": [
      {
        "key": "create-nix-dir",
        "status": "STATUS_SUCCEEDED",
        "subject": "ensure a directory",
        "undone": false,
        "verb": "VERB_CREATING"
      },
      {
        "key": "create-nix-var",
        "status": "STATUS_SUCCEEDED",
        "subject": "ensure a directory",
        "undone": true,
        "verb": "VERB_CREATING"
      },
      {
        "key": "create-groups",
        "status": "STATUS_SUCCEEDED",
        "subject": "ensure a group",
        "undone": true,
        "verb": "VERB_CREATING"
      },
      {
        "key": "write-marker",
        "status": "STATUS_SUCCEEDED",
        "subject": "ensure a file",
        "undone": false,
        "verb": "VERB_CREATING"
      },
      {
        "key": "write-nix-conf",
        "status": "STATUS_FAILED",
        "subject": "ensure a file",
        "undone": false,
        "verb": "VERB_CREATING"
      }
    ],
    "waits": [],
    "warnings": [
      {
        "causes": [
          {
            "causes": [],
            "code": "CODE_IO",
            "detail": "/injected: other error",
            "help": [
              "run the command again with `-v` to see what failed"
            ],
            "io": {
              "kind": "Other",
              "path": "/injected"
            },
            "subject": "/injected",
            "title": "Reading or writing a file failed for a reason other than permissions",
            "type": "urn:mix:problem:io"
          },
          {
            "causes": [],
            "code": "CODE_CONFLICT",
            "conflict": {
              "expected": "an empty directory",
              "found": "a directory with contents",
              "subject": "/nix"
            },
            "detail": "/nix: expected an empty directory, found a directory with contents",
            "help": [
              "run the command again to start from what is there now"
            ],
            "subject": "/nix",
            "title": "A file or account changed while `mix` was working on it",
            "type": "urn:mix:problem:conflict"
          }
        ],
        "code": "CODE_ROLLBACK_INCOMPLETE",
        "detail": "2 undo action(s) failed",
        "help": [
          "run `mix doctor` to see what is left",
          "run `mix repair` to put back what it can"
        ],
        "steps": {
          "steps": [
            "write-marker",
            "create-nix-dir"
          ]
        },
        "subject": "",
        "title": "The command failed, and undoing its changes failed too",
        "type": "urn:mix:problem:rollback-incomplete"
      }
    ]
  },
  "machine": {
    "files": {
      "/nix": {
        "added": {
          "directory": true,
          "mode": "0755",
          "owner": "0:0"
        }
      },
      "/nix/.mix-managed": {
        "added": {
          "contents": [],
          "mode": "0644",
          "owner": "0:0"
        }
      }
    }
  },
  "performed": [
    "CreateDir /nix",
    "CreateDir /nix/var",
    "AddGroup nixbld",
    "PutFile /nix/.mix-managed",
    "PutFile /etc/nix.conf",
    "RemoveCreated /nix/.mix-managed",
    "DeleteGroup nixbld",
    "RemoveCreated /nix/var",
    "RemoveCreated /nix"
  ]
}
