crates/core/src/plan/snapshots/mix_core__plan__tests__an_independent_run_that_is_stopped_undoes_the_step_in_progress_and_keeps_the_rest.snap
---
source: crates/core/src/plan/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_INTERRUPTED",
    "changes": [
      {
        "action": "CHANGE_ACTION_CREATE",
        "operation": "OPERATION_CREATE_DIR",
        "status": "STATUS_SUCCEEDED",
        "step": "create-nix-dir",
        "subject": "/nix",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_CREATE",
        "operation": "OPERATION_CREATE_DIR",
        "status": "STATUS_SUCCEEDED",
        "step": "create-nix-var",
        "subject": "/nix/var",
        "undone": true,
        "unknown": []
      }
    ],
    "command": "bootstrap",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [],
    "request": "request",
    "status": "STATUS_CANCELLED",
    "steps": [
      {
        "key": "create-nix-dir",
        "status": "STATUS_SUCCEEDED",
        "subject": "ensure a directory",
        "undone": false,
        "verb": "VERB_CREATING"
      },
      {
        "key": "create-nix-var",
        "status": "STATUS_CANCELLED",
        "subject": "ensure a directory",
        "undone": true,
        "verb": "VERB_CREATING"
      }
    ],
    "waits": [],
    "warnings": []
  },
  "machine": {
    "files": {
      "/nix": {
        "added": {
          "directory": true,
          "mode": "0755",
          "owner": "0:0"
        }
      }
    }
  },
  "performed": [
    "CreateDir /nix",
    "CreateDir /nix/var",
    "RemoveCreated /nix/var",
    "Commit changes"
  ]
}
