crates/core/src/plan/snapshots/mix_core__plan__tests__an_independent_step_that_fails_is_undone_alone_and_the_others_still_run.snap
---
source: crates/core/src/plan/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_UNSPECIFIED",
    "changes": [
      {
        "action": "CHANGE_ACTION_CREATE",
        "operation": "OPERATION_CREATE_DIR",
        "status": "STATUS_SUCCEEDED",
        "step": "create-nix-dir",
        "subject": "/nix",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_CREATE",
        "operation": "OPERATION_CREATE_DIR",
        "status": "STATUS_FAILED",
        "step": "create-nix-var",
        "subject": "/nix/var",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_CREATE",
        "operation": "OPERATION_ADD_GROUP",
        "status": "STATUS_SUCCEEDED",
        "step": "create-groups",
        "subject": "nixbld",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "write-marker",
        "subject": "/nix/.mix-managed",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "write-nix-conf",
        "subject": "/etc/nix.conf",
        "undone": false,
        "unknown": []
      }
    ],
    "command": "bootstrap",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [
      {
        "causes": [],
        "code": "CODE_IO",
        "detail": "/injected: other error",
        "help": [
          "run the command again with `-v` to see what failed"
        ],
        "io": {
          "kind": "Other",
          "path": "/injected"
        },
        "subject": "/injected",
        "title": "Reading or writing a file failed for a reason other than permissions",
        "type": "urn:mix:problem:io"
      }
    ],
    "request": "request",
    "status": "STATUS_FAILED",
    "steps": [
      {
        "key": "create-nix-dir",
        "status": "STATUS_SUCCEEDED",
        "subject": "ensure a directory",
        "undone": false,
        "verb": "VERB_CREATING"
      },
      {
        "key": "create-nix-var",
        "status": "STATUS_FAILED",
        "subject": "ensure a directory",
        "undone": false,
        "verb": "VERB_CREATING"
      },
      {
        "key": "create-groups",
        "status": "STATUS_SUCCEEDED",
        "subject": "ensure a group",
        "undone": false,
        "verb": "VERB_CREATING"
      },
      {
        "key": "write-marker",
        "status": "STATUS_SUCCEEDED",
        "subject": "ensure a file",
        "undone": false,
        "verb": "VERB_CREATING"
      },
      {
        "key": "write-nix-conf",
        "status": "STATUS_SUCCEEDED",
        "subject": "ensure a file",
        "undone": false,
        "verb": "VERB_CREATING"
      }
    ],
    "waits": [],
    "warnings": []
  },
  "machine": {
    "files": {
      "/etc/nix.conf": {
        "added": {
          "contents": [
            "trusted-users = root"
          ],
          "mode": "0644",
          "owner": "0:0"
        }
      },
      "/nix": {
        "added": {
          "directory": true,
          "mode": "0755",
          "owner": "0:0"
        }
      },
      "/nix/.mix-managed": {
        "added": {
          "contents": [],
          "mode": "0644",
          "owner": "0:0"
        }
      }
    },
    "groups": {
      "nixbld": {
        "added": {
          "gid": 30000,
          "members": []
        }
      }
    }
  },
  "performed": [
    "CreateDir /nix",
    "CreateDir /nix/var",
    "AddGroup nixbld",
    "PutFile /nix/.mix-managed",
    "PutFile /etc/nix.conf",
    "Commit changes"
  ]
}
